--- a/help/bantuan.html
+++ b/help/bantuan.html
@@ -4,11 +4,26 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="img/rubuk.jpg" type="image/x-icon">
+    <meta name="description" content="unit converter yaitu unit panjang, berat/massa, waktu, dan suhu">
+    <meta name="keyword" content="unit converter, connection, rubiku, converter">
+    <meta name="author" content="loading el connection">
+    <meta property="og:tittle" content="Unit converter">
+    <meta property="og:description" content="unit converter yaitu unit panjang, berat/massa, waktu, dan suhu">
+    <meta property="og:image" content="/img/og-img.png">
+    <meta property="og:url" content="https://unit-converter-bice-xi.vercel.app/">
+    <meta property="og:type" content="website - https://unit-converter-bice-xi.vercel.app/">
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Units converter" />
+    <meta name="twitter:description" content="unit converter yang dibuat dengan html, css dan js vanilla" />
+    <meta name="twitter:image" content="img/og-img.png" />
+    <link rel="canonical" href="https://unit-converter-bice-xi.vercel.app/">
     <title>Bantuan</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/regular/style.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/fill/style.css" />
+    <link rel="stylesheet" type="text/css"
+        href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/fill/style.css" />
 
 </head>
 
@@ -21,7 +36,8 @@
                 <i class="ph ph-arrow-fat-line-down"></i>
             </section>
             <section class="answer">
-                <p>Project kecil yang bermaksud sebagai latihan saya dalam pengaplikasian materi DOM dan JavaScript lainnya.</p>
+                <p>Project kecil yang bermaksud sebagai latihan saya dalam pengaplikasian materi DOM dan JavaScript
+                    lainnya.</p>
             </section>
         </section>
         <section class="Faq">
