--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <meta name="author" content="loading el connection">
     <meta property="og:tittle" content="Unit converter">
     <meta property="og:description" content="unit converter yaitu unit panjang, berat/massa, waktu, dan suhu">
-    <!-- <meta property="og:image" content="/img/og-img.png"> -->
-    <!-- <meta property="og:url" content="https://website-portofolio-connnection.vercel.app/">
-    <meta property="og:type" content="website - https://website-portofolio-connnection.vercel.app/"> -->
+    <meta property="og:image" content="/img/og-img.png">
+    <meta property="og:url" content="https://unit-converter-bice-xi.vercel.app/">
+    <meta property="og:type" content="website - https://unit-converter-bice-xi.vercel.app/">
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Units converter" />
     <meta name="twitter:description" content="unit converter yang dibuat dengan html, css dan js vanilla" />
-    <!-- <meta name="twitter:image" content="img/og-img.png" /> -->
-    <link rel="canonical" href="https://website-portofolio-connnection.vercel.app/">
-    <title>Units Converter</title>
+    <meta name="twitter:image" content="img/og-img.png" />
+    <link rel="canonical" href="https://unit-converter-bice-xi.vercel.app/">
     <link rel="stylesheet" href="/help/style.css" />
+    <title>Units Converter</title>
 </head>
 
 <body>
