--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="img/rubuk.jpg" type="image/x-icon">
     <meta name="description" content="unit converter yaitu unit panjang, berat/massa, waktu, dan suhu">
     <meta name="keyword" content="unit converter, connection, rubiku, converter">
-    <meta name="author" content="loading el connection">
+    <meta name="author" content="Rubiriku">
     <meta property="og:tittle" content="Unit converter">
     <meta property="og:description" content="unit converter yaitu unit panjang, berat/massa, waktu, dan suhu">
     <meta property="og:image" content="/img/og-img.png">
